--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/ZBar"]
 	path = third_party/ZBar
 	url = https://github.com/Zyy1996/ZBar.git
+[submodule "third_party/libev"]
+	path = third_party/libev
+	url = https://github.com/Zyy1996/libev.git
